// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserBadge auto center alignment 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoUserBadge-root"
    >
      <div
        class="PicassoAvatarWrapper-root PicassoAvatarWrapper-sizeXsmallSquare PicassoAvatarWrapper-cornerXsmall"
      >
        <div
          class="PicassoTextAvatar-root PicassoUserBadge-avatar PicassoTextAvatar-xsmall"
        >
          <p
            class="m-0 font-regular font-inherit leading-[1.5em] text-white PicassoTextAvatar-largeFont"
          >
            JD
          </p>
        </div>
      </div>
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoUserBadge-infoContainer"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <h4
            class="m-0 text-black font-semibold text-md text-black inline PicassoUserBadge-name"
          >
            Joe Doe
          </h4>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserBadge custom name 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-flexStartAlignItems PicassoContainer-flex PicassoUserBadge-root"
    >
      <div
        class="PicassoAvatarWrapper-root PicassoAvatarWrapper-sizeXsmallSquare PicassoAvatarWrapper-cornerXsmall"
      >
        <div
          class="PicassoTextAvatar-root PicassoUserBadge-avatar PicassoTextAvatar-xsmall"
        >
          <p
            class="m-0 font-regular font-inherit leading-[1.5em] text-white PicassoTextAvatar-largeFont"
          >
            JD
          </p>
        </div>
      </div>
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoUserBadge-infoContainer"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <div>
            Joe Doe
          </div>
        </div>
        <p
          class="m-0 font-regular font-inherit leading-[1.5em] text-graphite"
        >
          QA tester
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserBadge custom title 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-flexStartAlignItems PicassoContainer-flex PicassoUserBadge-root"
    >
      <div
        class="PicassoAvatarWrapper-root PicassoAvatarWrapper-sizeXsmallSquare PicassoAvatarWrapper-cornerXsmall"
      >
        <div
          class="PicassoTextAvatar-root PicassoUserBadge-avatar PicassoTextAvatar-xsmall"
        >
          <p
            class="m-0 font-regular font-inherit leading-[1.5em] text-white PicassoTextAvatar-largeFont"
          >
            JD
          </p>
        </div>
      </div>
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoUserBadge-infoContainer"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <h4
            class="m-0 text-black font-semibold text-md text-black inline PicassoUserBadge-name"
          >
            Joe Doe
          </h4>
          <div>
            Custom Title
          </div>
        </div>
        <p
          class="m-0 font-regular font-inherit leading-[1.5em] text-graphite"
        >
          QA tester
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserBadge invert render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-flexStartAlignItems PicassoContainer-flex PicassoUserBadge-root"
    >
      <div
        class="PicassoAvatarWrapper-root PicassoAvatarWrapper-sizeXsmallSquare PicassoAvatarWrapper-cornerXsmall"
      >
        <div
          class="PicassoTextAvatar-root PicassoUserBadge-avatar PicassoTextAvatar-xsmall"
        >
          <p
            class="m-0 font-regular font-inherit leading-[1.5em] text-white PicassoTextAvatar-largeFont"
          >
            JD
          </p>
        </div>
      </div>
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoUserBadge-infoContainer"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <h4
            class="m-0 text-black font-semibold text-md text-white inline PicassoUserBadge-name"
          >
            Joe Doe
          </h4>
        </div>
        <p
          class="m-0 font-regular font-inherit leading-[1.5em] text-graphite"
        >
          QA tester
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserBadge manual center alignment 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoUserBadge-root"
    >
      <div
        class="PicassoAvatarWrapper-root PicassoAvatarWrapper-sizeXsmallSquare PicassoAvatarWrapper-cornerXsmall"
      >
        <div
          class="PicassoTextAvatar-root PicassoUserBadge-avatar PicassoTextAvatar-xsmall"
        >
          <p
            class="m-0 font-regular font-inherit leading-[1.5em] text-white PicassoTextAvatar-largeFont"
          >
            JD
          </p>
        </div>
      </div>
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoUserBadge-infoContainer"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <h4
            class="m-0 text-black font-semibold text-md text-black inline PicassoUserBadge-name"
          >
            Joe Doe
          </h4>
        </div>
        <p
          class="m-0 font-regular font-inherit leading-[1.5em] text-graphite"
        >
          QA tester
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserBadge override auto center alignment 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-flexStartAlignItems PicassoContainer-flex PicassoUserBadge-root"
    >
      <div
        class="PicassoAvatarWrapper-root PicassoAvatarWrapper-sizeXsmallSquare PicassoAvatarWrapper-cornerXsmall"
      >
        <div
          class="PicassoTextAvatar-root PicassoUserBadge-avatar PicassoTextAvatar-xsmall"
        >
          <p
            class="m-0 font-regular font-inherit leading-[1.5em] text-white PicassoTextAvatar-largeFont"
          >
            JD
          </p>
        </div>
      </div>
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoUserBadge-infoContainer"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <h4
            class="m-0 text-black font-semibold text-md text-black inline PicassoUserBadge-name"
          >
            Joe Doe
          </h4>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserBadge renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-flexStartAlignItems PicassoContainer-flex PicassoUserBadge-root"
    >
      <div
        class="PicassoAvatarWrapper-root PicassoAvatarWrapper-sizeXsmallSquare PicassoAvatarWrapper-cornerXsmall"
      >
        <div
          class="PicassoTextAvatar-root PicassoUserBadge-avatar PicassoTextAvatar-xsmall"
        >
          <p
            class="m-0 font-regular font-inherit leading-[1.5em] text-white PicassoTextAvatar-largeFont"
          >
            JD
          </p>
        </div>
      </div>
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoUserBadge-infoContainer"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <h4
            class="m-0 text-black font-semibold text-md text-black inline PicassoUserBadge-name"
          >
            Joe Doe
          </h4>
        </div>
        <p
          class="m-0 font-regular font-inherit leading-[1.5em] text-graphite"
        >
          QA tester
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserBadge small size 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-flexStartAlignItems PicassoContainer-flex PicassoUserBadge-root"
    >
      <div
        class="PicassoAvatarWrapper-root PicassoAvatarWrapper-sizeSmallSquare PicassoAvatarWrapper-cornerSmall"
      >
        <div
          class="PicassoTextAvatar-root PicassoUserBadge-avatar PicassoTextAvatar-small"
        >
          <p
            class="m-0 font-regular font-inherit leading-[1.5em] text-white PicassoTextAvatar-largeFont"
          >
            JD
          </p>
        </div>
      </div>
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoUserBadge-infoContainer"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <h4
            class="m-0 text-black font-semibold text-md text-black inline PicassoUserBadge-name"
          >
            Joe Doe
          </h4>
        </div>
        <p
          class="m-0 font-regular font-inherit leading-[1.5em] text-graphite"
        >
          QA tester
        </p>
      </div>
    </div>
  </div>
</div>
`;
